<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activitycontent_padding">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:tag="color_activity_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_identity"/>

            <View
                android:tag="color_activity_1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_divider_height_medium"
                android:layout_marginTop="@dimen/view_divider_margintop"/>

            <EditText
                android:id="@+id/settings_edittext_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_holo_light"
                android:layout_marginTop="@dimen/view_margintop"
                android:hint="@string/edittext_firstname_hint"
                android:inputType="textPersonName"
                android:textSize="@dimen/textsize_medium"
                android:imeOptions="actionDone"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/settings_edittext_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_holo_light"
                android:layout_marginTop="@dimen/view_margintop"
                android:hint="@string/edittext_lastname_hint"
                android:inputType="textPersonName"
                android:textSize="@dimen/textsize_medium"
                android:imeOptions="actionDone"
                android:singleLine="true"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/viewgroup_margintop"
            android:gravity="left|center_vertical">

            <TextView
                android:tag="color_activity_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_connection"/>

            <View
                android:tag="color_activity_3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_divider_height_medium"
                android:layout_marginTop="@dimen/view_divider_margintop"/>

            <EditText
                android:id="@+id/settings_edittext_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_holo_light"
                android:layout_marginTop="@dimen/view_margintop"
                android:hint="@string/edittext_email_hint"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/textsize_medium"
                android:imeOptions="actionDone"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/settings_edittext_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_holo_light"
                android:layout_marginTop="@dimen/view_margintop"
                android:hint="@string/edittext_password_hint"
                android:inputType="textPassword"
                android:textSize="@dimen/textsize_medium"
                android:imeOptions="actionDone"
                android:singleLine="true"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/viewgroup_margintop">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/settings_checkbox_connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/signup_checkbox_margin"
                    android:button="@drawable/btn_check_holo_light"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/settings_textview_connect"
                    android:clickable="true"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:tag="color_activity_4"
            android:id="@+id/settings_button_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings_button_logout"
            android:onClick="endConnection"/>

    </LinearLayout>

</ScrollView>